basic site structure work-in-progress

--- a/index.html
+++ b/index.html
@@ -4,12 +4,35 @@
 <head>
     <meta charset="utf-8">
     <title>Tic-tac-toe</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="/styles/style.css" rel="stylesheet">
 </head>
 
 <body>
-
-    <script src="main.js"></script>
+    <h1>TIC-TAC-TOE</h1>
+    <div id="score">
+        <div id="player1">player1 : 0</div>
+        <div id="player2">player2 : 0</div>
+    </div>
+    <div id="main">
+        <div id="move1">move1</div>
+        <div id="board">
+            <div id="one">1</div>
+            <div id="two">2</div>
+            <div id="three">3</div>
+            <div id="four">4</div>
+            <div id="five">5</div>
+            <div id="six">6</div>
+            <div id="seven">7</div>
+            <div id="eight">8</div>
+            <div id="nine">9</div>
+        </div>
+        <div id="move2">move2</div>
+    </div>
+    <div id="buttons">
+        <button id="reset">reset</button>
+        <button id="menu">menu</button>
+    </div>
+    <script src="/scripts/main.js"></script>
 </body>
 
 </html>
