some new logic and styling

--- a/index.html
+++ b/index.html
@@ -16,15 +16,33 @@
     <div id="main">
         <div id="move1">move1</div>
         <div id="board">
-            <div id="one">1</div>
-            <div id="two">2</div>
-            <div id="three">3</div>
-            <div id="four">4</div>
-            <div id="five">5</div>
-            <div id="six">6</div>
-            <div id="seven">7</div>
-            <div id="eight">8</div>
-            <div id="nine">9</div>
+            <div id="one">
+                <div></div>
+            </div>
+            <div id="two">
+                <div></div>
+            </div>
+            <div id="three">
+                <div class="circle"></div>
+            </div>
+            <div id="four">
+                <div></div>
+            </div>
+            <div id="five">
+                <div class="circle"></div>
+            </div>
+            <div id="six">
+                <div></div>
+            </div>
+            <div id="seven">
+                <div></div>
+            </div>
+            <div id="eight">
+                <div class="cross"></div>
+            </div>
+            <div id="nine">
+                <div></div>
+            </div>
         </div>
         <div id="move2">move2</div>
     </div>
