--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <div></div>
             </div>
             <div id="three">
-                <div class="circle"></div>
+                <div></div>
             </div>
             <div id="four">
                 <div></div>
             </div>
             <div id="five">
-                <div class="circle"></div>
+                <div></div>
             </div>
             <div id="six">
                 <div></div>
@@ -38,7 +38,7 @@
                 <div></div>
             </div>
             <div id="eight">
-                <div class="cross"></div>
+                <div></div>
             </div>
             <div id="nine">
                 <div></div>
@@ -50,6 +50,7 @@
         <button id="reset">reset</button>
         <button id="menu">menu</button>
     </div>
+
     <script src="/scripts/main.js"></script>
 </body>
 
