readjusted appearance and started over with js

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 <body>
     <h1>TIC-TAC-TOE</h1>
     <div id="score">
-        <div id="player1">player1 : 0</div>
-        <div id="player2">player2 : 0</div>
+        <div id="player1"></div>
+        <div id="player2"></div>
     </div>
     <div id="main">
-        <div id="move1">move1</div>
         <div id="board">
             <div id="one">
                 <div></div>
@@ -44,13 +43,11 @@
                 <div></div>
             </div>
         </div>
-        <div id="move2">move2</div>
     </div>
     <div id="buttons">
         <button id="reset">reset</button>
         <button id="menu">menu</button>
     </div>
-
     <script src="/scripts/main.js"></script>
 </body>
 
