minor html and css adjustments, redid logic, added field array and click events for signs

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <h1>TIC-TAC-TOE</h1>
     <div id="score">
-        <div id="player1"></div>
-        <div id="player2"></div>
+        <div id="player1">Player1 : 0</div>
+        <div id="player2">Player2 : 0</div>
     </div>
-    <div id="main">
+    <div id="grid-wrapper">
         <div id="board">
             <div id="one">
                 <div></div>
