--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div id="buttons">
         <button id="reset">reset</button>
-        <button id="menu">menu</button>
+        <button id="player">rename players</button>
     </div>
     <script src="/scripts/main.js"></script>
 </body>
