--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>TIC-TAC-TOE</h1>
     <div id="score">
-        <div id="player1">Player1 : 0</div>
-        <div id="player2">Player2 : 0</div>
+        <div id="player1"></div>
+        <div id="player2"></div>
     </div>
     <div id="grid-wrapper">
         <div id="board">
